--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="https://cdn.aerisapi.com/sdk/js/latest/aerisweather.min.js"></script>
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/leaflet/leaflet.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script>
+    <script src="js/leaflet/leaflet.js"></script> -->
     <title>DisasterWatch</title>
 </head>
 <script>
-  const socket = io.connect('http://localhost:3000');
+  // const socket = io.connect('http://localhost:4000');
 </script>
 <body>
     <div id="root"></div>
