--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script defer src="https://cdn.aerisapi.com/sdk/js/latest/aerisweather.min.js"></script>
-    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+    <!-- <script defer src="https://cdn.aerisapi.com/sdk/js/latest/aerisweather.min.js"></script> -->
+    <!-- <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script> -->
     <!-- <script src="/socket.io/socket.io.js"></script>
     <script src="js/leaflet/leaflet.js"></script> -->
     <title>DisasterWatch</title>
@@ -16,6 +16,6 @@
 <body>
     <div id="root"></div>
     <script type="text/javascript" src="./build/bundle.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
 </body>
 </html>
